--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.SettingsActivity"
+            android:screenOrientation="landscape"
             android:exported="false" />
         <activity
             android:name=".activities.GameActivity"
+            android:screenOrientation="landscape"
             android:exported="false"
             android:theme="@style/Theme.MyApplication" />
         <activity
             android:name=".activities.MenuActivity"
+            android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
